--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html class="no-js" lang="en">
 
-<ul>
-  {% for post in site.posts %}
-    <li resource="{{ post.url | prepend: site.baseurl }}" typeof="schema:BlogPosting">
-      <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-    </li>
-  {% endfor %}
-</ul>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<p><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></p>
+  <title>App | AlgoRhythms</title>
+  <meta name="description" content="My experiments with the Web Audio API.">
+
+  <link rel="stylesheet" href="css/main.css">
+
+  <script src="bower_components/modernizr/modernizr.js"></script>
+</head>
+
+<body>
+  <div ng-view=""></div>
+
+  <script src="js/config-localhost.js"></script>
+  <script src="bower_components/requirejs/require.js" data-main="js/app"></script>
+</body>
+
+</html>
