Rename config and  files

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
   <div ng-view=""></div>
 
-  <script src="js/config-localhost.js"></script>
-  <script src="bower_components/requirejs/require.js" data-main="js/app"></script>
+  <script src="js/config.js"></script>
+  <script src="bower_components/requirejs/require.js" data-main="js/main"></script>
 </body>
 
 </html>
