--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
 
   <div id="fixtures"></div>
 
-  <script src="js/config-localhost.js"></script>
+  <script src="js/config.js"></script>
   <script src="bower_components/requirejs/require.js" data-main="js/test"></script>
 </body>
 
