Use cdnjs files instead of Bower

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
   <link rel="stylesheet" href="css/main.css">
 
-  <script src="bower_components/modernizr/modernizr.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 
 <body>
   <div ng-view=""></div>
 
   <script src="js/config.js"></script>
-  <script src="bower_components/requirejs/require.js" data-main="js/main"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.2.0/require.min.js" data-main="js/main"></script>
 </body>
 
 </html>
