--- a/test.html
+++ b/test.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <title>Test | AlgoRhythms</title>
 
-  <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" href="bower_components/mocha/mocha.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.4.5/mocha.min.css">
 
-  <script src="bower_components/modernizr/modernizr.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
   <div id="fixtures"></div>
 
   <script src="js/config.js"></script>
-  <script src="bower_components/requirejs/require.js" data-main="js/test"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.2.0/require.min.js" data-main="js/test"></script>
 </body>
 
 </html>
