Add offline and app capabilities

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <title>App | AlgoRhythms</title>
   <meta name="description" content="My experiments with the Web Audio API.">
 
+  <!-- http://blog.teamtreehouse.com/optimizing-mobile-web-apps-ios -->
+  <!-- https://developer.chrome.com/multidevice/android/installtohomescreen -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+  <link rel="apple-touch-startup-image" href="images/startup-image.png">
+  <meta name="apple-mobile-web-app-title" content="AlgoRhythms">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+
+  <!-- https://medium.com/@franciov/how-to-make-your-web-app-installable-8b71571605e#.z0m678i66 -->
+  <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="css/main.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
