--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 
-<body>
+<body tabindex="-1">
   <div ng-view=""></div>
 
   <script src="js/config.js"></script>
