--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body tabindex="-1">
-  <div ng-view=""></div>
+  <div class="Container" ng-view=""></div>
 
   <script src="js/config.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.2.0/require.min.js" data-main="js/main"></script>
