Update webapp capabilities and name

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>App | AlgoRhythms</title>
-  <meta name="description" content="My experiments with the Web Audio API.">
+  <title>Synthia</title>
+  <meta name="description" content="A configurable modular synthesizer.">
 
-  <!-- http://blog.teamtreehouse.com/optimizing-mobile-web-apps-ios -->
-  <!-- https://developer.chrome.com/multidevice/android/installtohomescreen -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+  <!-- Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon-180.png">
   <link rel="apple-touch-startup-image" href="images/startup-image.png">
-  <meta name="apple-mobile-web-app-title" content="AlgoRhythms">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
+  <link rel="icon" type="image/png" href="img/favicon-32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="img/favicon-16.png" sizes="16x16">
+  <link rel="mask-icon" href="img/favicon.svg" color="#3f51b5">
 
-  <!-- https://medium.com/@franciov/how-to-make-your-web-app-installable-8b71571605e#.z0m678i66 -->
+  <!-- Webapp configuration -->
+  <meta name="apple-mobile-web-app-title" content="Synthia">
+  <meta name="application-name" content="Synthia">
   <link rel="manifest" href="manifest.json">
 
   <link rel="stylesheet" href="css/main.css">
