--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html class="no-js" lang="en">
 
 <head>
+  <script type="text/javascript">
+    var host = "sccherry.github.io";
+
+    if ((host === window.location.host) && (window.location.protocol !== 'https:')) {
+      window.location.protocol = 'https';
+    }
+  </script>
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
