Use System.js instead of Require.js

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 <body tabindex="-1">
   <div class="Container" ng-view=""></div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.31/system.js"></script>
   <script src="js/config.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.2.0/require.min.js" data-main="js/main"></script>
+  <script>
+    System.import('main');
+  </script>
 </body>
 
 </html>
