--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <a class="md-button md-icon-button" href="#/">
           <md-icon md-font-set="material-icons">equalizer</md-icon>
         </a>
+        <a class="md-button md-icon-button" href="#/settings">
+          <md-icon md-font-set="material-icons">settings</md-icon>
+        </a>
         <a class="md-button md-icon-button" href="https://github.com/sccherry/synthia">
           <md-icon md-font-set="material-icons">info_outline</md-icon>
         </a>
