--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,9 @@
 
   <link rel="stylesheet" href="css/main.css">
 
+  <!-- build:modernizr -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+  <!-- endbuild -->
 </head>
 
 <body tabindex="-1">
@@ -57,11 +59,13 @@
     </md-content>
   </div>
 
+  <!-- build:js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.31/system.js"></script>
   <script src="js/config.js"></script>
   <script>
     System.import('main');
   </script>
+  <!-- endbuild -->
 </body>
 
 </html>
