Update webapp configuration

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 
 <head>
-  <script type="text/javascript">
+  <script>
     var host = "sccherry.github.io";
 
     if ((host === window.location.host) && (window.location.protocol !== 'https:')) {
@@ -19,13 +19,14 @@
 
   <!-- Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicon-180.png">
-  <link rel="apple-touch-startup-image" href="images/startup-image.png">
+  <link rel="apple-touch-startup-image" href="img/favicon-192.png">
   <link rel="icon" type="image/png" href="img/favicon-32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="img/favicon-16.png" sizes="16x16">
   <link rel="mask-icon" href="img/favicon.svg" color="#3f51b5">
 
   <!-- Webapp configuration -->
   <meta name="apple-mobile-web-app-title" content="Synthia">
+  <meta name="theme-color" content="#328647">
   <meta name="application-name" content="Synthia">
   <link rel="manifest" href="manifest.json">
 
