Switch to Aurelia framework

--- a/src/index.html
+++ b/src/index.html
@@ -37,34 +37,14 @@
   <!-- endbuild -->
 </head>
 
-<body tabindex="-1">
-  <div layout="column" layout-fill>
-    <md-toolbar>
-      <div class="md-toolbar-tools">
-        <span>Synthia</span>
-        <span flex></span>
-        <a class="md-button md-icon-button" href="#/">
-          <md-icon md-font-set="material-icons">equalizer</md-icon>
-        </a>
-        <a class="md-button md-icon-button" href="#/settings">
-          <md-icon md-font-set="material-icons">settings</md-icon>
-        </a>
-        <a class="md-button md-icon-button" href="https://github.com/sccherry/synthia">
-          <md-icon md-font-set="material-icons">info_outline</md-icon>
-        </a>
-      </div>
-    </md-toolbar>
-
-    <md-content>
-      <div ng-view></div>
-    </md-content>
-  </div>
-
+<body aurelia-app="main">
   <!-- build:js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.31/system.js"></script>
   <script src="js/config.js"></script>
+  <script src="https://gitcdn.xyz/repo/aurelia/aurelia/1.0.0/scripts/aurelia-core.min.js"></script>
+  <script src="https://gitcdn.xyz/repo/aurelia/aurelia/1.0.0/scripts/aurelia-router.min.js"></script>
   <script>
-    System.import('main');
+    System.import('aurelia-bootstrapper');
   </script>
   <!-- endbuild -->
 </body>
