--- a/src/js/resources/elements/filter.html
+++ b/src/js/resources/elements/filter.html
@@ -1,4 +1,6 @@
 <template>
+  <require from="./input-range"></require>
+
   <label for="filter-type">Type</label>
   <select id="filter-type"
     value.bind="params.type">
@@ -11,11 +13,5 @@
     <option repeat.for="value of rolloffs" value.bind="value">${value}</option>
   </select>
 
-  <label for="filter-q">Q</label>
-  <input type="range" id="filter-q" min="0" max="1000"
-    aria-label="Filter Q value"
-    value.bind="params.Q">
-  <input type="number" min="0" max="1000"
-    aria-label="Filter Q" aria-controls="filter-q"
-    value.bind="params.Q">
+  <input-range value.bind="params.Q" max="1000" label="Q" id="filter-q" change.trigger="onChange()"></input-range>
 </template>
