--- a/src/js/resources/elements/frequency-envelope.html
+++ b/src/js/resources/elements/frequency-envelope.html
@@ -1,33 +1,11 @@
 <template>
-  <label for="filter-envelope-attack">Attack</label>
-  <input type="range" id="filter-envelope-attack" min="0" max="1" step="0.001"
-    aria-label="Filter envelope attack"
-    value.bind="params.attack">
-  <input type="number" min="0" max="1" step="0.001"
-    aria-label="Filter envelope attack" aria-controls="filter-envelope-attack"
-    value.bind="params.attack">
+  <require from="./input-range"></require>
 
-  <label for="filter-envelope-decay">Decay</label>
-  <input type="range" id="filter-envelope-decay" min="0" max="1" step="0.001"
-    aria-label="Filter envelope decay"
-    value.bind="params.decay">
-  <input type="number" min="0" max="1" step="0.001"
-    aria-label="Filter envelope decay" aria-controls="filter-envelope-decay"
-    value.bind="params.decay">
+  <input-range value.bind="params.attack" min="0" max="1" step="0.001" label="Attack" id="filter-envelope-attack"></input-range>
 
-  <label for="filter-envelope-sustain">Sustain</label>
-  <input type="range" id="filter-envelope-sustain" min="0" max="1" step="0.001"
-    aria-label="Filter envelope sustain"
-    value.bind="params.sustain">
-  <input type="number" min="0" max="1" step="0.001"
-    aria-label="Filter envelope sustain" aria-controls="filter-envelope-sustain"
-    value.bind="params.sustain">
+  <input-range value.bind="params.decay" min="0" max="1" step="0.001" label="Decay" id="filter-envelope-decay"></input-range>
 
-  <label for="filter-envelope-release">Release</label>
-  <input type="range" id="filter-envelope-release" min="0" max="10" step="0.001"
-    aria-label="Filter envelope release"
-    value.bind="params.release">
-  <input type="number" min="0" max="10" step="0.001"
-    aria-label="Filter envelope release" aria-controls="filter-envelope-release"
-    value.bind="params.release">
+  <input-range value.bind="params.sustain" min="0" max="1" step="0.001" label="Sustain" id="filter-envelope-sustain"></input-range>
+
+  <input-range value.bind="params.release" min="0" max="1" step="0.001" label="Release" id="filter-envelope-release"></input-range>
 </template>
