--- a/src/js/resources/elements/omni-oscillator.html
+++ b/src/js/resources/elements/omni-oscillator.html
@@ -1,7 +1,7 @@
 <template>
   <label for="oscillator-type">Type</label>
   <select id="oscillator-type"
-    value.bind="params.type">
+    value.bind="model.type">
     <option repeat.for="type of types" value.bind="type">${type}</option>
   </select>
 </template>
