--- a/src/js/resources/elements/amplitude-envelope.html
+++ b/src/js/resources/elements/amplitude-envelope.html
@@ -1,11 +1,11 @@
 <template>
   <require from="./input-range"></require>
 
-  <input-range value.bind="params.attack" min="0" max="1" step="0.001" label="Attack" id="envelope-attack"></input-range>
+  <input-range value.bind="model.attack" min="0" max="1" step="0.001" label="Attack" id="envelope-attack"></input-range>
 
-  <input-range value.bind="params.decay" min="0" max="1" step="0.001" label="Decay" id="envelope-decay"></input-range>
+  <input-range value.bind="model.decay" min="0" max="1" step="0.001" label="Decay" id="envelope-decay"></input-range>
 
-  <input-range value.bind="params.sustain" min="0" max="1" step="0.001" label="Sustain" id="envelope-sustain"></input-range>
+  <input-range value.bind="model.sustain" min="0" max="1" step="0.001" label="Sustain" id="envelope-sustain"></input-range>
 
-  <input-range value.bind="params.release" min="0" max="1" step="0.001" label="Release" id="envelope-release"></input-range>
+  <input-range value.bind="model.release" min="0" max="1" step="0.001" label="Release" id="envelope-release"></input-range>
 </template>
