--- a/src/js/settings/settings.html
+++ b/src/js/settings/settings.html
@@ -7,18 +7,18 @@
   <div change.delegate="onChange()">
     <h2>Oscillator</h2>
 
-    <omni-oscillator params.bind="params.oscillator"></omni-oscillator>
+    <omni-oscillator model.bind="params.oscillator"></omni-oscillator>
 
     <h3>Envelope</h3>
 
-    <amplitude-envelope params.bind="params.envelope"></amplitude-envelope>
+    <amplitude-envelope model.bind="params.envelope"></amplitude-envelope>
 
     <h2>Filter</h2>
 
-    <filter params.bind="params.filter"></filter>
+    <filter model.bind="params.filter"></filter>
 
     <h3>Envelope</h3>
 
-    <frequency-envelope params.bind="params.filterEnvelope"></frequency-envelope>
+    <frequency-envelope model.bind="params.filterEnvelope"></frequency-envelope>
   </div>
 </template>
