--- a/src/resources/elements/filter.html
+++ b/src/resources/elements/filter.html
@@ -13,5 +13,5 @@
     <option repeat.for="value of rolloffs" model.bind="value">${value}</option>
   </select>
 
-  <input-range value.bind="model.Q" max="1000" label="Q" id="filter-q" change.trigger="onChange()"></input-range>
+  <input-range value.bind="model.Q" max="1000" label="Q" id="filter-q"></input-range>
 </template>
