--- a/src/app.html
+++ b/src/app.html
@@ -3,5 +3,7 @@
 
   <nav-bar router.bind="router"></nav-bar>
 
-  <router-view></router-view>
+  <main role="main">
+    <router-view></router-view>
+  </main>
 </template>
