--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -9,7 +9,7 @@
 
     <omni-oscillator model.bind="params.oscillator"></omni-oscillator>
 
-    <h3>Envelope</h3>
+    <h2>Amplitude Envelope</h2>
 
     <amplitude-envelope model.bind="params.envelope"></amplitude-envelope>
 
@@ -17,7 +17,7 @@
 
     <filter model.bind="params.filter"></filter>
 
-    <h3>Envelope</h3>
+    <h2>Frequency Envelope</h2>
 
     <frequency-envelope model.bind="params.filterEnvelope"></frequency-envelope>
   </div>
