--- a/src/shell/nav-bar.html
+++ b/src/shell/nav-bar.html
@@ -2,11 +2,13 @@
   <require from="../resources/elements/midi-select"></require>
 
   <header role="banner">
-    <h1>${router.title}</h1>
+    <h1><a href="#/">${router.title}</a></h1>
 
     <nav role="navigation">
       <ul>
-        <li class="${row.isActive ? 'is-active' : ''}" repeat.for="row of router.navigation"><a href.bind="row.href">${row.title}</a></li>
+        <li class="${row.isActive ? 'is-active' : ''}" repeat.for="row of router.navigation">
+          <a href.bind="row.href">${row.title}</a>
+        </li>
         <li><a href="https://github.com/sccherry/synthia">About</a></li>
       </ul>
     </nav>
