Move Tone objects to separate directory

--- a/src/resources/tone/amplitude-envelope.html
+++ b/src/resources/tone/amplitude-envelope.html
@@ -1,5 +1,5 @@
 <template>
-  <require from="./input-range"></require>
+  <require from="../elements/input-range"></require>
 
   <input-range value.bind="model.attack" min="0" max="1" step="0.001" label="Attack" id="envelope-attack"></input-range>
 
