--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -1,8 +1,8 @@
 <template>
-  <require from="../resources/elements/omni-oscillator"></require>
-  <require from="../resources/elements/amplitude-envelope"></require>
-  <require from="../resources/elements/filter"></require>
-  <require from="../resources/elements/frequency-envelope"></require>
+  <require from="../resources/tone/omni-oscillator"></require>
+  <require from="../resources/tone/amplitude-envelope"></require>
+  <require from="../resources/tone/filter"></require>
+  <require from="../resources/tone/frequency-envelope"></require>
 
   <div change.delegate="onChange()">
     <h2>Oscillator</h2>
