--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -1,24 +1,49 @@
 <template>
+  <require from="../resources/elements/card"></require>
   <require from="../resources/tone/omni-oscillator"></require>
   <require from="../resources/tone/amplitude-envelope"></require>
   <require from="../resources/tone/filter"></require>
   <require from="../resources/tone/frequency-envelope"></require>
 
   <div change.delegate="onChange()">
-    <h2>Oscillator</h2>
+    <card>
+      <div slot="header">
+        <h2>Oscillator</h2>
+      </div>
 
-    <omni-oscillator model.bind="params.oscillator"></omni-oscillator>
+      <div slot="main">
+        <omni-oscillator model.bind="params.oscillator"></omni-oscillator>
+      </div>
+    </card>
 
-    <h2>Amplitude Envelope</h2>
+    <card>
+      <div slot="header">
+        <h2>Amplitude Envelope</h2>
+      </div>
 
-    <amplitude-envelope model.bind="params.envelope"></amplitude-envelope>
+      <div slot="main">
+        <amplitude-envelope model.bind="params.envelope"></amplitude-envelope>
+      </div>
+    </card>
 
-    <h2>Filter</h2>
+    <card>
+      <div slot="header">
+        <h2>Filter</h2>
+      </div>
 
-    <filter model.bind="params.filter"></filter>
+      <div slot="main">
+        <filter model.bind="params.filter"></filter>
+      </div>
+    </card>
 
-    <h2>Frequency Envelope</h2>
+    <card>
+      <div slot="header">
+        <h2>Frequency Envelope</h2>
+      </div>
 
-    <frequency-envelope model.bind="params.filterEnvelope"></frequency-envelope>
+      <div slot="main">
+        <frequency-envelope model.bind="params.filterEnvelope"></frequency-envelope>
+      </div>
+    </card>
   </div>
 </template>
