--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 
   <nav-bar router.bind="router"></nav-bar>
 
-  <main role="main">
+  <main class="Container" role="main">
     <router-view></router-view>
   </main>
 </template>
