Use SynthService for PianoRoll

--- a/src/synth/synth.html
+++ b/src/synth/synth.html
@@ -1,5 +1,5 @@
 <template>
   <require from="../resources/elements/piano-roll"></require>
 
-  <piano-roll noteon.bind="start" noteoff.bind="stop"></piano-roll>
+  <piano-roll noteon.bind="synth.triggerAttack" noteoff.bind="synth.triggerRelease"></piano-roll>
 </template>
