Move reusable UI elements to separate folder

--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -1,5 +1,5 @@
 <template>
-  <require from="../resources/elements/card"></require>
+  <require from="../resources/ui/card"></require>
   <require from="../resources/tone/omni-oscillator"></require>
   <require from="../resources/tone/amplitude-envelope"></require>
   <require from="../resources/tone/filter"></require>
