--- a/src/resources/tone/filter.html
+++ b/src/resources/tone/filter.html
@@ -1,5 +1,5 @@
 <template>
-  <require from="../elements/input-range"></require>
+  <require from="../ui/input-range"></require>
 
   <label for="filter-type">Type</label>
   <select id="filter-type"
