--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -5,7 +5,7 @@
   <require from="../resources/tone/filter"></require>
   <require from="../resources/tone/frequency-envelope"></require>
 
-  <div change.delegate="onChange()">
+  <div change.delegate="onChange($event)">
     <card>
       <div slot="header">
         <h2>Oscillator</h2>
