--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Synthia</title>
-  <meta name="description" content="A configurable modular synthesizer.">
+  <meta name="description" content="A configurable, modular synthesizer.">
 
   <!-- Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicon-180.png">
