Make Piano roll a page instead of a custom element

--- a/src/piano/piano.html
+++ b/src/piano/piano.html
@@ -1,7 +1,7 @@
 <template>
-  <require from="./piano-roll.css"></require>
+  <require from="./piano.css"></require>
 
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 518 99" class="PianoRoll" mousedown.delegate="onMousedown($event)" mouseup.delegate="onMouseup($event)">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 518 99" class="Piano" mousedown.delegate="onMousedown($event)" mouseup.delegate="onMouseup($event)">
     <rect width="8" height="48" x="0" y="50" class="Piano-key Piano-key--natural" data-midi="21" />
       <rect width="8" height="48" x="5" class="Piano-key Piano-key--accidental" data-midi="22" />
     <rect width="8" height="48" x="10" y="50" class="Piano-key Piano-key--natural" data-midi="23" />
