--- a/src/shell/nav-bar.html
+++ b/src/shell/nav-bar.html
@@ -2,7 +2,7 @@
   <require from="../resources/elements/midi-select"></require>
 
   <header role="banner">
-    <h1><a href="#/">${router.title}</a></h1>
+    <h1><a href="/">${router.title}</a></h1>
 
     <nav role="navigation">
       <ul>
