Use Semantic UI

--- a/src/resources/elements/midi-select.html
+++ b/src/resources/elements/midi-select.html
@@ -1,10 +1,13 @@
 <template>
   <div show.bind="hasMIDI">
-    <label for="midi-select-active">MIDI Device</label>
-    <select id="midi-select-active" value.bind="activeDevice" change.delegate="onChange()">
-      <option value="">Choose a MIDI device&hellip;</option>
-      <option repeat.for="device of devices" model.bind="device">${device.manufacturer} ${device.name}</option>
-    </select>
+    <ui-input>
+      <label for="midi-select-active">MIDI Device</label>
+
+      <select id="midi-select-active" value.bind="activeDevice" change.delegate="onChange()">
+        <option value="">Choose a MIDI device&hellip;</option>
+        <option repeat.for="device of devices" model.bind="device">${device.manufacturer} ${device.name}</option>
+      </select>
+    </ui-input>
   </div>
 
   <div if.bind="error">
