--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,11 @@
 <template>
+  <require from="semantic-ui/components/reset.css"></require>
+  <require from="semantic-ui/components/site.css"></require>
   <require from="./shell/nav-bar.html"></require>
 
   <nav-bar router.bind="router"></nav-bar>
 
-  <main class="Container" role="main">
+  <main role="main">
     <router-view></router-view>
   </main>
 </template>
