--- a/src/resources/tone/elements/frequency-envelope.html
+++ b/src/resources/tone/elements/frequency-envelope.html
@@ -1,9 +1,37 @@
 <template>
-  <input-range value.bind="model.attack" min="0" max="1" step="0.001" label="Attack" id="filter-envelope-attack"></input-range>
+  <ui-input>
+    <label for="frequency-envelope-attack">Attack</label>
 
-  <input-range value.bind="model.decay" min="0" max="1" step="0.001" label="Decay" id="filter-envelope-decay"></input-range>
+    <input type="range" id="frequency-envelope-attack" min="0" max="1" step="0.001" value.bind="model.attack"
+      aria-label="Attack">
+    <input type="number" min="0" max="1" step="0.001" value.bind="model.attack"
+      aria-hidden="true">
+  </ui-input>
 
-  <input-range value.bind="model.sustain" min="0" max="1" step="0.001" label="Sustain" id="filter-envelope-sustain"></input-range>
+  <ui-input>
+    <label for="frequency-envelope-decay">Decay</label>
 
-  <input-range value.bind="model.release" min="0" max="1" step="0.001" label="Release" id="filter-envelope-release"></input-range>
+    <input type="range" id="frequency-envelope-decay" min="0" max="1" step="0.001" value.bind="model.decay"
+      aria-label="Decay">
+    <input type="number" min="0" max="1" step="0.001" value.bind="model.decay"
+      aria-hidden="true">
+  </ui-input>
+
+  <ui-input>
+    <label for="frequency-envelope-sustain">Sustain</label>
+
+    <input type="range" id="frequency-envelope-sustain" min="0" max="1" step="0.001" value.bind="model.sustain"
+      aria-label="Sustain">
+    <input type="number" min="0" max="1" step="0.001" value.bind="model.sustain"
+      aria-hidden="true">
+  </ui-input>
+
+  <ui-input>
+    <label for="frequency-envelope-release">Release</label>
+
+    <input type="range" id="frequency-envelope-release" min="0" max="1" step="0.001" value.bind="model.release"
+      aria-label="Release">
+    <input type="number" min="0" max="1" step="0.001" value.bind="model.release"
+      aria-hidden="true">
+  </ui-input>
 </template>
