--- a/src/resources/tone/elements/omni-oscillator.html
+++ b/src/resources/tone/elements/omni-oscillator.html
@@ -1,7 +1,9 @@
 <template>
-  <label for="oscillator-type">Type</label>
-  <select id="oscillator-type"
-    value.bind="model.type">
-    <option repeat.for="type of types" value.bind="type">${type}</option>
-  </select>
+  <ui-input>
+    <label for="oscillator-type">Type</label>
+
+    <select id="oscillator-type" value.bind="model.type">
+      <option repeat.for="type of types" value.bind="type">${type}</option>
+    </select>
+  </ui-input>
 </template>
