--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -3,25 +3,25 @@
     <ui-card>
       <h2>Oscillator</h2>
 
-      <omni-oscillator model.two-way="params.oscillator"></omni-oscillator>
+      <tone-omni-oscillator model.two-way="params.oscillator"></tone-omni-oscillator>
     </ui-card>
 
     <ui-card>
       <h2>Amplitude Envelope</h2>
 
-      <amplitude-envelope model.two-way="params.envelope"></amplitude-envelope>
+      <tone-amplitude-envelope model.two-way="params.envelope"></tone-amplitude-envelope>
     </ui-card>
 
     <ui-card>
       <h2>Filter</h2>
 
-      <filter model.two-way="params.filter"></filter>
+      <tone-filter model.two-way="params.filter"></tone-filter>
     </ui-card>
 
     <ui-card>
       <h2>Frequency Envelope</h2>
 
-      <frequency-envelope model.two-way="params.filterEnvelope"></frequency-envelope>
+      <tone-frequency-envelope model.two-way="params.filterEnvelope"></tone-frequency-envelope>
     </ui-card>
   </div>
 </template>
