Refactor Web MIDI API into a feature

--- a/src/resources/features/webmidi/elements/webmidi-access.html
+++ b/src/resources/features/webmidi/elements/webmidi-access.html
@@ -1,8 +1,8 @@
 <template>
-  <div show.bind="hasMIDI">
-    <label for="midi-select-active">MIDI Device</label>
+  <div if.bind="!error">
+    <label for="" hidden aria-hidden="false">MIDI Device</label>
 
-    <select id="midi-select-active" value.bind="activeDevice" change.delegate="onChange($event)">
+    <select id="" name="" value.bind="activeDevice" change.delegate="onChange($event)">
       <option value="">Choose a MIDI device&hellip;</option>
       <option repeat.for="device of devices" model.bind="device">${device.manufacturer} ${device.name}</option>
     </select>
