--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,9 @@
 <template>
   <require from="./shell/nav-bar.html"></require>
 
-  <nav-bar router.bind="router"></nav-bar>
+  <nav-bar router.bind="router">
+    <midi-access type="inputs" midimessage.bind="onMidimessage"></midi-access>
+  </nav-bar>
 
   <main role="main">
     <router-view></router-view>
