--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -1,19 +1,5 @@
 <template>
   <div change.delegate="onChange($event)">
-    <h2>Oscillator</h2>
-
-    <tone-omni-oscillator id="oscillator" connect="filter" model.two-way="params.oscillator"></tone-omni-oscillator>
-
-    <h2>Amplitude Envelope</h2>
-
-    <tone-amplitude-envelope id="envelope" model.two-way="params.envelope"></tone-amplitude-envelope>
-
-    <h2>Filter</h2>
-
-    <tone-filter id="filter" connect="envelope" model.two-way="params.filter"></tone-filter>
-
-    <h2>Frequency Envelope</h2>
-
-    <tone-frequency-envelope id="filterEnvelope" connect="filter.frequency" model.two-way="params.filterEnvelope"></tone-frequency-envelope>
+    <tone-mono-synth oscillator.bind="params.oscillator" envelope.bind="params.envelope" filter.bind="params.filter", filter-envelope.bind="params.filterEnvelope"></tone-mono-synth>
   </div>
 </template>
