Use default values

--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -1,5 +1,5 @@
 <template>
   <div change.delegate="onChange($event)">
-    <tone-mono-synth oscillator.bind="params.oscillator" envelope.bind="params.envelope" filter.bind="params.filter", filter-envelope.bind="params.filterEnvelope"></tone-mono-synth>
+    <tone-mono-synth></tone-mono-synth>
   </div>
 </template>
