--- a/src/shell/nav-bar.html
+++ b/src/shell/nav-bar.html
@@ -1,6 +1,8 @@
 <template bindable="router">
   <header role="banner">
-    <h1><a href="/">${router.title}</a></h1>
+    <h1>
+      <a href="/">${router.title}</a>
+    </h1>
 
     <nav role="navigation">
       <ul>
