--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <script>
-    var host = "sccherry.github.io";
+    var host = 'stevecherry.net';
 
     if ((host === window.location.host) && (window.location.protocol !== 'https:')) {
       window.location.protocol = 'https';
@@ -32,8 +31,9 @@
 
   <link rel="stylesheet" href="styles/styles.css">
 </head>
-
 <body aurelia-app="main">
+  <div class="is-loading">Loading&hellip;</div>
+
   <!-- The bluebird version is locked at 4.6.3 in the package.json file to keep this from breaking -->
   <!-- We include bluebird to bypass Edge's very slow Native Promise implementation. The Edge team -->
   <!-- has fixed the issues with their implementation with these fixes being distributed with the  -->
@@ -47,5 +47,4 @@
     System.import('aurelia-bootstrapper');
   </script>
 </body>
-
 </html>
