--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
   <require from="./shell/nav-bar.html"></require>
 
   <nav-bar router.bind="router">
-    <midi-access type="inputs" midimessage.bind="onMidimessage"></midi-access>
+    <webmidi-access type="inputs"></webmidi-access>
   </nav-bar>
 
   <main role="main">
